Fix possible author name layout overlap
Ensures that if an author has no 'about' info that the next author's name appears below the first author's name instead of next to it.

--- a/assets/stylesheets/_screen.scss
+++ b/assets/stylesheets/_screen.scss
@@ -383,7 +383,6 @@ article {
         }
 
         .byline {
-            float: left;
             font-size: 14px;
             margin-bottom: 1em;
 
